# renate-transcription-bot

./: .env.example  .gitignore  ARCHITECTURE.md  CRITICAL_GAPS.md  PLAN.md  PLAN_roster_and_diarization_fix.md  TEST_COMMANDS.md  docker-compose.yml  landing_page_meet_29-04-26_5pm.md  package-lock.json  package.json  transcript-225bc5ed.txt  transcript-3f2ef5f3.txt  transcript-df440808.txt
api/: Dockerfile  package.json
api/src/: config.ts  index.ts
bot/: Dockerfile  package.json  tsconfig.json
bot/docker/: entrypoint.sh
bot/scripts/: generate-auth.ts
bot/src/: activeSpeaker.ts  audio.ts  captions.ts  config.ts  debug.ts  endDetect.ts  index.ts  join.ts  peoplePanel.ts  selectors.ts  state.ts
context/: PIPELINE.md  README.md
db/migrations/: 0001_init.sql  0002_workspace_credentials.sql  0003_drop_workspace_credentials.sql  0004_word_timestamps.sql  0005_transcript_final_cluster.sql  0006_transcript_final_rendered_view.sql
diarize/: Dockerfile  pyproject.toml
diarize/src/: config.py  main.py  pyannote_runner.py
docs/: ARCHITECTURE.md
plans/: PLAN_roster_and_diarization_fix.md
worker/: Dockerfile  package.json
worker/scripts/: smoke-finalize.ts
worker/src/: config.ts  finalize.ts  index.ts  persist.ts  reconcile.ts  renderTranscript.ts  s3.ts  sarvam.ts  spawnBot.ts  summarize.ts  turnAlign.ts
