[project]
name = "renate-diarize"
version = "0.0.0"
description = "pyannote-based diarization sidecar for Renate"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "boto3>=1.35.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "pyannote.audio>=3.3.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
